# ruxum

./: .gitignore  CHANGELOG.md  Cargo.toml  EC2_DEPLOYMENT_GUIDE.md  EC2_QUICK_FIX.md  README.md  TAILWIND_4_COMPATIBILITY.md  TAILWIND_4_FIX_SUMMARY.md  TAILWIND_4_QUICK_REFERENCE.md  TAILWIND_4_TESTING.md  TEMPLATE_NAMING_GUIDE.md  VERCEL_BUILD_CONFIG.md  package-lock.json  package.json  tsconfig.json  vercel.json
SF6_COMBO_BUILDER/: README.md
SF6_COMBO_BUILDER/api/: .env.example  Cargo.toml
SF6_COMBO_BUILDER/api/src/: main.rs  router.rs
SF6_COMBO_BUILDER/www/: .env.example  package.json
src/: cli.rs  cli.ts  config.rs  index.ts  main.rs  scaffold.ts  template_engine.rs  types.ts  wizard.rs
src/helpers/: fs.ts  logger.ts
src/scaffold/: mod.rs  nextjs.rs  rust.rs  validator.rs
src/templates/: auth.ts  cargo.ts  config.ts  db_diesel.ts  db_seaorm.ts  db_sqlx.ts  env.ts  errors.ts  health.ts  main_rs.ts  models.ts  nextjs.ts  router.ts
src/templates/nextjs/: drizzle_config.rs  env_example.rs  globals_css.rs  layout_tsx.rs  package_json.rs  prisma_schema.rs
src/templates/rust/: cargo_toml.rs  config_rs.rs  env_example.rs  health_openapi_rs.rs  main_rs.rs  openapi_rs.rs  router_rs.rs
template/fragments/nextjs/: auth.ts  db_drizzle.ts  drizzle_schema.ts  env.ts  prisma_schema.prisma
test-axum-app/: .gitignore  Cargo.toml
test-axum-app/src/: errors.rs
test-output/my-api/: Cargo.toml
test-output/my-project/: README.md
website/: astro.config.mjs  package-lock.json  package.json
website/dreary-doppler/: package.json
www/: .npmignore  DOCUMENTATION_GAPS.md  astro.config.mjs  package-lock.json  package.json  vercel.json
www/public/: robots.txt
www/scripts/: gen-og.mjs
www/src/: content.config.ts
www/src/lib/: nav.ts
(+84 files in other folders)
